[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/imgs/pickups/portal/portal2.png" type="Texture" id=1]
[ext_resource path="res://assets/imgs/pickups/portal/portal4.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/pickups/portal/portal1.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/pickups/portal/portal0.png" type="Texture" id=4]
[ext_resource path="res://assets/imgs/pickups/portal/portal3.png" type="Texture" id=5]
[ext_resource path="res://src/pickup/portal.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/sfx/olderNoises/finishLevel.wav" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 13.5004, 24.5428, 12.9405 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="portal" type="Area"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )
modulate = Color( 1, 0, 0, 1 )
billboard = 1
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="finishLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0

[connection signal="body_entered" from="." to="." method="_on_portal_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
